Changelog
=========

1.0a3 (unreleased)
------------------

- fix get_localized_time issue when datetime is None (effective date)


1.0a2 (2013-01-17)
------------------

- fix setup view content rule creation (issue was on the target_root_folder)


1.0a1 (2013-01-16)
------------------

- Initial release